@@ -1,3 +1,7 @@
+2009-01-20 19:19 No value has been set
+
+	* Added topic bugs/array
+
 2009-01-14 11:03 Francois Dechelle
 
 	* Added topic php
